@@ -27,6 +27,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20140503
+* worked on block-based read to support Windows device files
+
 20140502
 * worked on block-based read to support Windows device files
 
